objects/Instant_advisory__c.object
<CustomObject>
    <label>Instant advisory</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Instant advisory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instant advisory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instant Advisory</fullName>
                    <default>true</default>
                    <label>Instant Advisory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Instant advisory</relationshipLabel>
        <relationshipName>Instant_advisory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_IA__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_reason__c</fullName>
        <label>Call reason</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Makeup advice</fullName>
                </value>
                <value>
                    <fullName>Fragrance advice</fullName>
                </value>
                <value>
                    <fullName>Skincare advice</fullName>
                </value>
                <value>
                    <fullName>Product specificities (format, benefits)</fullName>
                </value>
                <value>
                    <fullName>Ingredients &amp; precautions of use</fullName>
                </value>
                <value>
                    <fullName>Sample requests</fullName>
                </value>
                <value>
                    <fullName>Assistance to order</fullName>
                </value>
                <value>
                    <fullName>Engraving service</fullName>
                </value>
                <value>
                    <fullName>E-services &amp; catalog</fullName>
                </value>
                <value>
                    <fullName>Loyalty program information</fullName>
                </value>
                <value>
                    <fullName>Customer service related</fullName>
                </value>
                <value>
                    <fullName>Product availability</fullName>
                </value>
                <value>
                    <fullName>Product’s feedback</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ecommerce Assistance</fullName>
                    <isActive>false</isActive>
                    <label>Ecommerce Assistance</label>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                    <isActive>false</isActive>
                    <label>Product Information</label>
                </value>
                <value>
                    <fullName>Product specificities (ingredients, benefits)</fullName>
                    <isActive>false</isActive>
                    <label>Product specificities (ingredients, benefits)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Instant advisory</relationshipLabel>
        <relationshipName>Instant_advisory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Flag_IA__c</fullName>
        <formula>CASE(Market_IA__c,
&quot;FR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkBAAS&quot;,&quot;France&quot;),
&quot;IT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkAAAS&quot;,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflNAAS&quot;,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflMAAS&quot;,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl0AAC&quot;,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkHAAS&quot;,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjyAAC&quot;,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk9AAC&quot;,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjuAAC&quot;,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflAAAS&quot;,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl8AAC&quot;,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl9AAC&quot;,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl7AAC&quot;,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk2AAC&quot;,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkzAAC&quot;,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Hc9Y&quot;,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dfda&quot;, &quot;Germany&quot;),
&quot;FI&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1Y&quot;,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1S&quot;,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1q&quot;,&quot;Canada&quot;),
&quot;US&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1l&quot;,&quot;USA&quot;),
&quot;BR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1X&quot;,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1j&quot;,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1i&quot;,&quot;China&quot;),
&quot;HK&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1h&quot;,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1g&quot;,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1b&quot;,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1W&quot;,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1R&quot;,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001E37R&quot;,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkR&quot;,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001E3De&quot;,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkk&quot;,&quot;Australia&quot;),
&quot;INT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg3T&quot;,&quot;International&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfnSAAS&quot;,&quot;Inconnu&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product search</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>Catalog Sales</value>
            </filterItems>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>Promo Sales Single Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Instant advisory</relationshipLabel>
        <relationshipName>Instant_advisory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_IA_Sent__c</fullName>
        <label>Survey IA Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Case_IA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Instant advisory</relationshipLabel>
        <relationshipName>Instant_advisory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Franchise_search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Franchise search</label>
        <referenceTo>Franchise__c</referenceTo>
        <relationshipLabel>Instant advisory</relationshipLabel>
        <relationshipName>Instant_advisory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_to_send_DUE__c</fullName>
        <description>Technical field used in flow Instant Advisory - ScheduleTriggered - CS - Sends IA Surveys
Gives the ability to know if the Instant Adivsory has 1 day old to be send to DUE</description>
        <formula>DATEVALUE(Created_Date_custom__c)= TODAY()-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to send DUE ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_custom__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>